[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Fonts/Calistoga/Calistoga-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Audio/button-press-sound.wav" type="AudioStream" id=2]
[ext_resource path="res://scripts/Training/Instructions.gd" type="Script" id=3]
[ext_resource path="res://Assets/Images/help.png" type="Texture" id=4]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.117647, 0.564706, 0.937255, 1 )

[sub_resource type="CubeMesh" id=1]
material = SubResource( 4 )
size = Vector3( 2.7, 1.25, 0.2 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Board/Viewport")

[sub_resource type="CylinderMesh" id=9]
top_radius = 0.175
bottom_radius = 0.175
height = 0.1

[sub_resource type="CylinderShape" id=10]
radius = 0.18
height = 0.1

[node name="Instructions" type="Spatial"]
script = ExtResource( 3 )

[node name="Board" type="MeshInstance" parent="."]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0, 0 )
cast_shadow = 0
mesh = SubResource( 1 )
material/0 = null

[node name="Viewport" type="Viewport" parent="Board"]
size = Vector2( 900, 900 )
transparent_bg = true
render_target_v_flip = true

[node name="Label" type="Label" parent="Board/Viewport"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "Thin the fruitlets on the tree by following the rules below. 

Rule 1: Thin down each cluster to two fruitlets.
Rule 2: Remove diseased fruitlets and leave healthy ones.
Rule 3: Remove smaller fruitlets and leave larger ones.

Press the \"Finish\" button to evaluate your thinning process."

[node name="Sprite3D" type="Sprite3D" parent="Board"]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0.0989628, -0.873733, 0.102525 )
cast_shadow = 0
texture = SubResource( 3 )

[node name="HideAndShowBoardButton" type="MeshInstance" parent="."]
transform = Transform( 0.650704, 0.195475, 0.168444, -3.99478e-08, -0.45695, 0.53028, 0.258039, -0.492936, -0.42477, 0.509715, -0.458695, 0.232266 )
cast_shadow = 0
mesh = SubResource( 9 )
material/0 = null

[node name="HideAndShowBoardButtonArea" type="Area" parent="HideAndShowBoardButton"]

[node name="CollisionShape" type="CollisionShape" parent="HideAndShowBoardButton/HideAndShowBoardButtonArea"]
shape = SubResource( 10 )

[node name="Sprite3D" type="Sprite3D" parent="HideAndShowBoardButton"]
transform = Transform( 0.3, 7.45058e-09, -8.19564e-08, 7.45058e-09, 1.49012e-08, -0.3, 0, 0.3, 8.9407e-08, -5.96046e-08, -0.0545346, 0 )
cast_shadow = 0
texture = ExtResource( 4 )

[node name="WaitButtonInteractiveTimer" type="Timer" parent="."]

[node name="ButtonPressedSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="area_entered" from="HideAndShowBoardButton/HideAndShowBoardButtonArea" to="." method="_on_HideAndShowBoardButtonArea_area_entered"]
